<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SettingsFragment">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/chainPointsSwitch"
                android:text="@string/chain_points_settings_hint"
                android:textSize="12sp" app:layout_constraintEnd_toStartOf="@+id/guideline3"
        />
        <TextView
                android:text="@string/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"/>
        <android.support.constraint.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintGuide_begin="30dp"
                android:id="@+id/guideline"/>
        <android.support.constraint.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline2"
                app:layout_constraintGuide_end="40dp"/>
        <android.support.constraint.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline3"
                app:layout_constraintGuide_end="120dp"/>
        <TextView
                android:text="@string/delayed_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="14sp"
                android:id="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
        <TextView
                android:text="@string/notification_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="14sp"
                android:id="@+id/notifTimeTextView"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:textStyle="italic"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"/>
        <Switch
                android:text="@string/chain_points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/chainPointsSwitch"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
        />
        <Switch
                android:text="@string/special_days"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sdSwitch"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        <Switch
                android:text="@string/notifications"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/notificationsSwitch" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"/>
        <TextView
                android:text="@string/notifications_settings_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/notificationsSwitch" android:textSize="12sp"/>
        <TextView
                android:text="@string/delay_settings_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView10" app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" android:textSize="12sp"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weekStartsFromSpinner" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/notifTimeTextView"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" android:spinnerMode="dropdown"/>
        <TextView
                android:text="@string/special_days_settings_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/sdSwitch" app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:textSize="12sp"/>
        <TextView
                android:text="@string/week_starts_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/notifTimeTextView"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/delayDaysSpinner"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7" android:spinnerMode="dropdown"/>
        <Switch
                android:text="@string/every_few_days_strict"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/everyNDaysStrictSwitch" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/every_n_days_settings_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/everyNDaysStrictSwitch"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:text="@string/_22_00"
                android:gravity="center"
                android:textStyle="italic"
                android:ems="10"
                android:id="@+id/timeEditText" app:layout_constraintEnd_toStartOf="@+id/guideline2"
                android:layout_marginEnd="8dp"
                android:textSize="14sp" app:layout_constraintBaseline_toBaselineOf="@+id/notifTimeTextView"/>
        <Switch
                android:text="Gratitude mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/gratitudeSwitch" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/guideline2" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginStart="8dp"/>
        <TextView
                android:text="Mark three happy events every day and gain additional Will points"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/gratitudeSwitch"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="Reset settings to default"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/toDefaultTextView"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView12"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorBlue" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0" android:textStyle="bold"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>