...
    <string name="not_done">Not done</string>
    <string name="special_day">Special day</string>
    <string name="activities">Actions</string>
    <string name="results">Results</string>

    <string-array name="array_week_starts_from">
        <item>Mon</item>
        <item>Sun</item>
    </string-array>

    <string-array name="array_delay_days">
        <item>0</item>
        <item>1</item>
        <item>2</item>
...
